--- a/view/css/style.css
+++ b/view/css/style.css
@@ -2,8 +2,8 @@
  body {
     font-size:24px;
     font-family:Oswald, Tahoma, sans-serif;
-}
-div#text {
+}*/
+/*div#text {
     margin-top:48px;
     text-align:center;
     z-index: 4;
@@ -12,7 +12,7 @@ div#dropzone {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999999999;
+    z-index: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -58,13 +58,6 @@ div#textnode {
  cursor: pointer; / "hand" cursor /
 } */
 
-
-
-
-
-
-
-*
 {
     font-family: "Roboto Mono", monospace;
 }
