--- a/view/css/style.css
+++ b/view/css/style.css
@@ -109,7 +109,7 @@ main
 }
 
 #slide-out > li > a
-{    
+{
     position: relative;
     top: -20px;
     display: inline-block;
@@ -117,13 +117,6 @@ main
 }
 
 .editext
-{
-  width: 250px;
-  text-align: center;
-  margin-left: 25%;
-}
-
-.form-group
 {
   width: 250px;
   text-align: center;
@@ -241,4 +234,35 @@ main
 
   position: fixed;
   display: none;
+}
+
+
+
+div#dropzone{
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: visibility 175ms, opacity 175ms;
+    display: table;
+    text-shadow: 1px 1px 2px #000;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.45);
+    font: bold 42px Oswald, DejaVu Sans, Tahoma, sans-serif;
+}
+div#dropzone p{
+    font-size: 0.5em;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+div#dropzone p:first-child{
+    padding-top: 15%;
 }
