--- a/view/css/style.css
+++ b/view/css/style.css
@@ -143,15 +143,6 @@ main
   margin-left: 25%;
 }
 
-#imgnomalerte
-{
-  margin-left: -10%;
-  margin-top: 7%;
-
-  position: absolute;
-  display: none;
-}
-
 #nomalerte
 {
 /*  background-color: #757575;*/
@@ -162,7 +153,7 @@ main
   height: 58px;
 
   margin-left: 12%;
-  margin-top: -4%;
+  margin-top: -3em;
 
   position: absolute;
   display: none;
@@ -187,47 +178,31 @@ main
   height: 58px;
 
   margin-left: 12%;
-  margin-top: -4%;
+  margin-top: -3em;
 
   position: absolute;
   display: none;
 }
 
-#imgmaildestalerte
-{
-  margin-top: 7%;
-  margin-left: -10%;
 
-  position: absolute;
-  display: none;
-}
 
 #maildestalerte
 {
 /*  background-color: #757575 ;*/
 /*  color: #fff;*/
-    color: red:
+    color: red;
 
-  width: 10%;
+  width: 15%;
   height: 56px;
 
-  margin-left: 12%;
-  margin-top: -4%;
+  margin-left: 8%;
+  margin-top: -3em;
 
   position: absolute;
   display: none;
 }
 
-#imgfichieralerte
-{
-  width: 83%;
 
-  margin-left: -78%;
-  margin-top: 3.5%;
-
-  position: absolute;
-  display: none;
-}
 
 #fichieralerte
 {
@@ -237,14 +212,12 @@ main
 */
   color: red;
 
-  width: 10%;
+  width: 15%;
   height: 66px;
 
-  margin-left: 58%;
-  margin-top: -2%;
+  margin-left: 44%;
+  margin-top: -1em;
 
   position: absolute;
   display: none;
 }
-Contact GitHub API Training Shop Blog About
-© 2017 GitHub, Inc. Terms Privacy Security Status Help
