--- a/view/css/style.css
+++ b/view/css/style.css
@@ -153,6 +153,38 @@ h1 #redac
     width: 20%;
 }
 
+#nomAlerte
+{
+    display: block;
+    width: 12em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#mailalerte
+{
+    display: block;
+    width: 12em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#maildestalerte
+{
+    display: block;
+    width: 17em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#fichieralerte
+{
+    display: block;
+    width: 15.3em;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 
 /*#nomalerte
 {
