--- a/view/css/style.css
+++ b/view/css/style.css
@@ -57,10 +57,6 @@ div#textnode {
  cursor: pointer; / "hand" cursor /
 } */
 
-{
-    font-family: "Roboto Mono", monospace;
-}
-
 body
 {
     height: 40em;
@@ -118,9 +114,9 @@ main
 }
 
 
-h1 #redac
+h1#redac
 {
-    font-family: "Roboto Mono";
+    font-family: 'Roboto Mono', monospace;
 }
 /*.editext
 {
@@ -146,41 +142,48 @@ h1 #redac
 
 #divError
 {
+    display: none;
     position: absolute;
     top: 21em;
     right: 12em;
     background-color: white;
     width: 20%;
+    height: 50%;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+#nomAlerte, #mailalerte, #maildestalerte, #fichieralerte
+{
+    display: block;
+    font-family: 'Roboto Mono', monospace;
 }
 
 #nomAlerte
 {
-    display: block;
-    width: 12em;
+    width: 17em;
     margin-left: auto;
     margin-right: auto;
 }
 
 #mailalerte
 {
-    display: block;
-    width: 12em;
+    width: 18em;
     margin-right: auto;
     margin-left: auto;
 }
 
 #maildestalerte
 {
-    display: block;
-    width: 17em;
+    width: 15em;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
 
 #fichieralerte
 {
-    display: block;
-    width: 15.3em;
+    width: 14.3em;
+    text-align: center;
     margin-right: auto;
     margin-left: auto;
 }
