--- a/view/css/style.css
+++ b/view/css/style.css
@@ -148,7 +148,7 @@ h1#redac
     right: 12em;
     background-color: white;
     width: 20%;
-    height: 50%;
+    height: 14em;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -156,6 +156,19 @@ h1#redac
 {
     display: block;
     font-family: 'Roboto Mono', monospace;
+    margin-top: 1em;
+    color: #2962ff;
+    animation-name: slidein;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes slidein 
+{
+    0% {color: #2962ff;}
+    30% {color: #d50000;}
+    70% {color: #d50000;}
+    100% {color: #2962ff;}
 }
 
 #nomAlerte
@@ -182,7 +195,7 @@ h1#redac
 
 #fichieralerte
 {
-    width: 14.3em;
+    width: 14em;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
